fixing border/width issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -493,7 +493,7 @@ main li {
 .post-preview-card {
   background-color: rgba(255, 255, 255, 0.6);
   margin-bottom: 20px;
-  border: 1.5px solid darkslategrey;
+  border: 1px solid darkslategrey;
   box-shadow: 2px 2px 2px lightgrey;
 }
 
@@ -698,8 +698,9 @@ h5.index-list {
 }
 
 .blog-tile img {
-  width: 247px;
+  width: 248px;
   height: auto;
+  overflow-x: hidden;
 }
 
 .blog-tile h5,
